--- a/src/app.css
+++ b/src/app.css
@@ -31,6 +31,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  overflow-x: hidden;
+
   /* place-items: center;
   min-width: 320px;
   min-height: 100vh; */
