--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
-$primary: #3A95E9;
-$lightBlue: #86EFFF;
+$primary: #3a95e9;
+$lightBlue: #86efff;
 
-$colorTwo: #8072BD;
-$colorThree: #E17141;
+$colorTwo: #8072bd;
+$colorThree: #e17141;
 
 $dark: #003851;
-
+$white: #ffffff;
 
 // $font-family-sans-serif: "Poppins" ,system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
