--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Ubuntu, Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 18px;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -39,8 +39,16 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 24px;
+  line-height: 26px;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 16px;
+  line-height: 18px;
+  margin: 5px 0;
+  font-weight: 400;
 }
 
 .card {
