--- a/src/theme.scss
+++ b/src/theme.scss
@@ -8,5 +8,23 @@ $colorThree: #e17141;
 
 $dark: #003851;
 $white: #ffffff;
+$grey: #999999;
 
 // $font-family-sans-serif: "Poppins" ,system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+h1 {
+  font-size: 24px;
+  line-height: 26px;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 16px;
+  line-height: 18px;
+  margin: 5px 0;
+  font-weight: 400;
+  color: $dark;
+}
+
+span {
+  color: $dark;
+}
