change post style

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -9,6 +9,7 @@ $colorThree: #e17141;
 $dark: #003851;
 $white: #ffffff;
 $grey: #999999;
+$green: #33c192;
 
 // $font-family-sans-serif: "Poppins" ,system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 h1 {
